--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "joi": "^18.0.0",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
